--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
 [build-system]
-requires = ["setuptools>=61", "wheel"]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
-
-[tool.setuptools.packages.find]
-where = ["."]          # search in current directory
-include = ["misc*"]    # include only packages starting with 'misc'
-exclude = ["test_*"]   # exclude test folders
 
 [project]
 name = "util"
 version = "0.1.0"
 description = "Some reusable utilities"
+requires-python = ">=3.8"
+dependencies = [
+    # Add your dependencies here, e.g., "requests", "click"
+]
 license = "MIT"
-authors = [{name = "Dasun Tharaka", email = "sendtodasun@gmail.com"}]
+
+[project.scripts]
+util = "misc" # Allows running via command line
